test(jpa): harden concurrent store verification