@@ -11,9 +11,11 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.dao.TransientDataAccessException;
 import org.springframework.test.context.DynamicPropertyRegistry;
 import org.springframework.test.context.DynamicPropertySource;
 import org.springframework.transaction.support.TransactionTemplate;
+import jakarta.persistence.OptimisticLockException;
 import org.testcontainers.containers.MySQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
@@ -22,6 +24,7 @@ import javax.sql.DataSource;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 
@@ -38,7 +41,8 @@ class MySqlJpaInboxStoreIT {
     static final MySQLContainer<?> mysql = new MySQLContainer<>("mysql:8.0")
             .withDatabaseName("jfoundry")
             .withUsername("jfoundry")
-            .withPassword("jfoundry");
+            .withPassword("jfoundry")
+            .withCommand("--innodb_lock_wait_timeout=1");
 
     @Autowired
     private JpaInboxMessageStore store;
@@ -84,22 +88,26 @@ class MySqlJpaInboxStoreIT {
     @Test
     void onlyOneConcurrentWorkerClaimsTheMessage() throws Exception {
         CountDownLatch start = new CountDownLatch(1);
-        ExecutorService pool = Executors.newFixedThreadPool(4);
+        ExecutorService pool = Executors.newVirtualThreadPerTaskExecutor();
         AtomicInteger winners = new AtomicInteger();
+        var workers = new java.util.ArrayList<Future<?>>();
         try {
             for (int i = 0; i < 4; i++) {
-                pool.submit(() -> {
+                workers.add(pool.submit(() -> {
                     await(start);
                     inTransaction(() -> {
-                        if (store.tryStartProcessing("evt-1", "projection")) {
+                        if (retryTransientTransaction(() -> store.tryStartProcessing("evt-1", "projection"))) {
                             winners.incrementAndGet();
                         }
                     });
-                });
+                }));
             }
             start.countDown();
             pool.shutdown();
             assertThat(pool.awaitTermination(20, TimeUnit.SECONDS)).isTrue();
+            for (Future<?> worker : workers) {
+                worker.get();
+            }
         } finally {
             pool.shutdownNow();
         }
@@ -118,6 +126,23 @@ class MySqlJpaInboxStoreIT {
 
     private void inTransaction(Runnable action) {
         transactions.executeWithoutResult(ignored -> action.run());
+    }
+
+    private <T> T retryTransientTransaction(java.util.function.Supplier<T> action) {
+        for (int attempt = 0; ; attempt++) {
+            try {
+                return transactions.execute(ignored -> action.get());
+            } catch (RuntimeException exception) {
+                if (!(exception instanceof TransientDataAccessException)
+                        && !(exception instanceof OptimisticLockException)) {
+                    throw exception;
+                }
+                if (attempt == 4) {
+                    throw exception;
+                }
+                java.util.concurrent.locks.LockSupport.parkNanos(TimeUnit.MILLISECONDS.toNanos(25));
+            }
+        }
     }
 
     private static void await(CountDownLatch latch) {
