@@ -12,9 +12,11 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.dao.TransientDataAccessException;
 import org.springframework.test.context.DynamicPropertyRegistry;
 import org.springframework.test.context.DynamicPropertySource;
 import org.springframework.transaction.support.TransactionTemplate;
+import jakarta.persistence.OptimisticLockException;
 import org.testcontainers.containers.MySQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
@@ -26,6 +28,7 @@ import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Supplier;
 
@@ -43,7 +46,7 @@ class MySqlJpaOutboxStoreIT {
             .withDatabaseName("jfoundry")
             .withUsername("jfoundry")
             .withPassword("jfoundry")
-            .withCommand("--max_allowed_packet=16M");
+            .withCommand("--max_allowed_packet=16M", "--innodb_lock_wait_timeout=1");
 
     @Autowired
     private JpaOutboxMessageStore store;
@@ -80,20 +83,24 @@ class MySqlJpaOutboxStoreIT {
             return null;
         });
         CountDownLatch start = new CountDownLatch(1);
-        ExecutorService pool = Executors.newFixedThreadPool(4);
+        ExecutorService pool = Executors.newVirtualThreadPerTaskExecutor();
         List<String> claimedIds = java.util.Collections.synchronizedList(new ArrayList<>());
+        List<Future<?>> workers = new ArrayList<>();
         try {
             for (int i = 0; i < 4; i++) {
                 int worker = i;
-                pool.submit(() -> {
+                workers.add(pool.submit(() -> {
                     await(start);
-                    claimedIds.addAll(inTransaction(() -> store.claimDispatchable(1, "pod-" + worker))
+                    claimedIds.addAll(retryTransientTransaction(() -> store.claimDispatchable(1, "pod-" + worker))
                             .stream().map(OutboxMessage::getEventId).toList());
-                });
+                }));
             }
             start.countDown();
             pool.shutdown();
             assertThat(pool.awaitTermination(20, TimeUnit.SECONDS)).isTrue();
+            for (Future<?> worker : workers) {
+                worker.get();
+            }
         } finally {
             pool.shutdownNow();
         }
@@ -153,6 +160,23 @@ class MySqlJpaOutboxStoreIT {
 
     private <T> T inTransaction(Supplier<T> action) {
         return transactions.execute(ignored -> action.get());
+    }
+
+    private <T> T retryTransientTransaction(Supplier<T> action) {
+        for (int attempt = 0; ; attempt++) {
+            try {
+                return inTransaction(action);
+            } catch (RuntimeException exception) {
+                if (!(exception instanceof TransientDataAccessException)
+                        && !(exception instanceof OptimisticLockException)) {
+                    throw exception;
+                }
+                if (attempt == 4) {
+                    throw exception;
+                }
+                java.util.concurrent.locks.LockSupport.parkNanos(TimeUnit.MILLISECONDS.toNanos(25));
+            }
+        }
     }
 
     private String value(String sql) {
